# nn-recsys

./: README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
nn_recsys/: loss_fn.py  toolbox.py
nn_recsys/encoder/: __init__.py  column_encoder.py  sequential_encoder.py
nn_recsys/evaluator/: __init__.py  general_rating_evaluator.py  sequential_evaluator.py
nn_recsys/loader/: __init__.py  general_rating_loader.py  sequential_loader.py
nn_recsys/model/: DPLRFwFM.py  FM.py  FwFM.py  GRU4Rec.py  MF.py  __init__.py  two_tower.py
notebook/AMAZON-M2/: 00_GRU4Rec.ipynb
notebook/ML1M/: 00_MF_RATING.ipynb  01_FM_RATING.ipynb  02_TWO_TOWER_RATING.ipynb  03_FwFM_RATING.ipynb  04_DPLRFwFM_RATING.ipynb
