[tool.poetry]
name = "nn-recsys"
version = "1.2.1"
description = ""
authors = ["Kai Sugahara <contact@kais.jp>"]
readme = "README.md"
license="Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
nn-trainer = {git = "https://github.com/KaiSugahara/nn-trainer", tag = "v1.1.1"}
polars = "^1.36.1"
scikit-learn = "^1.8.0"
kagglehub = "^0.3.13"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
